--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <!-- Google analitics -->
+<!--
 <script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>                                                                                                          
 <script type="text/javascript">                                                                                    
 var pageTracker = _gat._getTracker("UA-4170197-1");                                                                
@@ -38,8 +39,8 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
       <div class="doge-says">
         <p></p>
       </div>
-      <div class="info">
-        <!-- <div class="hide-info"><a>HIDE</a></div> -->
+      <div class="info"> -->
+        <!-- <div class="hide-info"><a>HIDE</a></div> --><!--
        <p>Hasznald a nyilakat</p>
        <p>Ilyen Artúr megy while I don't play unfitting music</p>    
        <p> Modified by   <a href="http://bovli.tumblr.com" target="_blank">B&oacute;vli</a>
@@ -91,13 +92,13 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
     <div class="info-container">
      <a class="show-info">INFO</a>  
     </div> 
-  </div>
+  </div> -->
 <!--  <div class="footer">
     <div class="fb-like" data-href="http://doge2048.com" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out DOGE2048, a game where you join doges to score high! #2048game #doge2048" data-via="laferrera" data-url="http://doge2048.com" data-counturl="http://doge2048.com">Tweet</a>
   </div>
 -->
-
+<!--
   <script src="js/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
@@ -106,6 +107,6 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
-
+-->
 </body>
 </html>
