--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Arth</title>
-
+  <!-- 23-->
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.png">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- Google analitics -->
-<!--
+<!-- Did you expect any easter eggs? 
 <script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>                                                                                                          
 <script type="text/javascript">                                                                                    
 var pageTracker = _gat._getTracker("UA-4170197-1");                                                                
@@ -45,7 +45,7 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
        <p>Ilyen Artúr megy while I don't play unfitting music</p>    
        <p> Modified by   <a href="http://bovli.tumblr.com" target="_blank">B&oacute;vli</a>
        <p> Modified the modified  <a href="http://darwinous.tumblr.com" target="_blank">darwin</a>
-	   <p> <strike>Copied</strike>Modified last Brabulla</a>
+	   <p> <strike>Copied</strike> Modified by Brabulla</a>
 	   <p> Original <a href="http://doge2048.com/">Doge</a>
        <p> Original 2048 created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a></p> 
       </div>
@@ -53,7 +53,7 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Höj.</a>
-          <a class="retry-button">Nocheinmal</a>
+          <a class="retry-button">Noch einmal</a>
         </div>
       </div>
 
@@ -89,6 +89,7 @@ pageTracker._setLocalRemoteServerMode(); pageTracker._initData(); pageTracker._t
       </div>
     </div>
     <p class="game-explanation">Tutorial: www.youtube.com/watch?v=dQw4w9WgXcQ</p>
+    <!-- LOLNOPE --><!--
     <div class="info-container">
      <a class="show-info">INFO</a>  
     </div> 
